@@ -63,24 +63,23 @@
                     data-title="{trans("Click copies to clipboard")}">
                     <i class="lms-ui-icon-clipboard"></i>
                 </a>
-                {if $imadded}
-                    {button type="link" icon="owner" onclick="location.href = '?m=eventedit&id={$event.id}&action=unassign&backid=' + $(this).closest('.event-day-table').attr('id');" tip="<!event>Unassign"}
-                {else}
-                    {button type="link" icon="owner" onclick="location.href = '?m=eventedit&id={$event.id}&action=assign&backid=' + $(this).closest('.event-day-table').attr('id');" tip="<!event>Assign"}
-                {/if}
                 {if ConfigHelper::checkPrivilege('timetable_management')}
-                    {if $event.closed}
+		{if ($event.closed)}
+                    {if !ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800) || ($smarty.now - $event.closeddate < ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800)) || ConfigHelper::checkPrivilege('superuser')}
                         {button type="link" icon="open" onclick="location.href = '?m=eventedit&id={$event.id}&action=open&backid=' + $(this).closest('.event-day-table').attr('id');" tip="Open"}
+                    {/if}
+                {else}
+                    {if $imadded}
+                        {button type="link" icon="owner" onclick="location.href = '?m=eventedit&id={$event.id}&action=unassign&backid=' + $(this).closest('.event-day-table').attr('id');" tip="<!event>Unassign"}
                     {else}
-                        {button type="link" icon="close" onclick="location.href = '?m=eventedit&id={$event.id}&action=close&backid=' + $(this).closest('.event-day-table').attr('id');" tip="Close"}
-                        {button type="link" icon="clone" href="?m=eventadd&id={$event.id}" tip="Clone"}
-                        {button type="link" icon="delete" class="delete-event" href="?m=eventdel&id={$event.id}" tip="Delete permanently"}
-                        {button type="link" class="event-edit" icon="edit" href="?m=eventedit&id={$event.id}&backid=" tip="Edit"}
+                        {button type="link" icon="owner" onclick="location.href = '?m=eventedit&id={$event.id}&action=assign&backid=' + $(this).closest('.event-day-table').attr('id');" tip="<!event>Assign"}
                     {/if}
-                    {if $imadded && $event.note == ''}
-                        {button type="link" icon="note" onclick="location.href = '?m=eventnote&id={$event.id}&backid=' + $(this).closest('.event-day-table').attr('id');" tip="Add Note"}
-                        </A>
-                    {/if}
+                    {button type="link" icon="close" onclick="location.href = '?m=eventedit&id={$event.id}&action=close&backid=' + $(this).closest('.event-day-table').attr('id');" tip="Close"}
+                    {button type="link" icon="clone" href="?m=eventadd&id={$event.id}" tip="Clone"}
+                    {button type="link" icon="delete" class="delete-event" href="?m=eventdel&id={$event.id}" tip="Delete permanently"}
+                    {button type="link" class="event-edit" icon="edit" href="?m=eventedit&id={$event.id}&backid=" tip="Edit"}
+                    {button type="link" icon="note" onclick="location.href = '?m=eventnote&id={$event.id}&backid=' + $(this).closest('.event-day-table').attr('id');" tip="Add Note"}
+                {/if}
                 {/if}
             {/buttons}
         </div>
